Change login view style

--- a/app.html
+++ b/app.html
@@ -7,17 +7,15 @@
 <body>
 <!-- Header -->
 <header class='header'>
-	HEADER
 </header>
 
 <!-- Nav Bar -->
 <nav class='navbar'>
-	NAV
 </nav>
 
 <!-- App content -->
 <section id='diploApp' ng-app='diploApp'>
-	<div id='appContent' ui-view></div>
+	<div class='app-container' id='appContent' ui-view></div>
 
 	<!-- dummy view so $routeProvide.otherwise() will work -->
 	<div class='dummy' ng-view></div>
